--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -86,10 +86,8 @@
                 <div class="row jc-center">
                     <div class="col-md-4 dn768">
                         <div class="custom-img-point">
-                            <img class="img-responsive"
-                                src="/images/Services/custom-blockchain1.png"
-                                srcset="/images/Services/custom-blockchain1@2x.png 2x"
-                                alt="Eosio blockchain">
+                            <img class="img-responsive" src="/images/Services/custom-blockchain1.png"
+                                srcset="/images/Services/custom-blockchain1@2x.png 2x" alt="Eosio blockchain">
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -101,10 +99,8 @@
                     </div>
                     <div class="col-md-4 dn768">
                         <div class="custom-img-point">
-                            <img class="img-responsive"
-                                src="/images/Services/custom-blockchain2.png"
-                                srcset="/images/Services/custom-blockchain2@2x.png 2x"
-                                alt="Eosio blockchain">
+                            <img class="img-responsive" src="/images/Services/custom-blockchain2.png"
+                                srcset="/images/Services/custom-blockchain2@2x.png 2x" alt="Eosio blockchain">
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -159,8 +155,7 @@
             </div>
         </div>
         <div class="container dot-wrap60px">
-            <img src="/images/Solutions/Logistics/dots.svg"
-                alt="Dots" class="dots">
+            <img src="/images/Solutions/Logistics/dots.svg" alt="Dots" class="dots">
         </div>
 
         <div class="container technologies blockchain-development">
@@ -228,96 +223,99 @@
         
         <% include ../common/quote.ejs %>
 
-        <!-- Our Process -->
-        <div class="container mt-60px solutions-tools">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 class="h1 color-h2 m-0 p-0">服务流程</h2>
-                </div>
-                <div class="col-md-6">
-                    <p>成功的定制区块链项目需要良好的技能和流程的把控。我们使用精心设计的区块链开发流程，结合敏捷开发流程，让您的项目完全按照您的业务要求实现。</p>
-                    <p>OpenLedger内部团队包括产品经理、需求分析人员、架构师、开发人员、质量保证专家和其他专业人士，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：</p>
-                </div>
-            </div>
-        </div>
-        <div class="container mt-30px solution-container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="background-white sol1 sol-tile">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="h2">
-                                    <span>1 <span>/</span></span>项目调研和规划</h3>
-                                <p class="mt-10px">
-                                    调研的阶段可能比开发阶段需要更多的时间，因为我们必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
-                                </p>
-                            </div>
-                            <div class="col-md-6">
-                                <ul>
-                                    <li>收集需求</li>
-                                    <li>分析业务需求和问题</li>
-                                    <li>进行报价和计算时间周期</li>
-                                    <li>找出障碍点和风险</li>
-                                    <li>制定策略和规划</li>
-                                    <li>制作原型</li>
-                                </ul>
+                        <!-- Our Process -->
+                        <div class="container mt-60px solutions-tools">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h2 class="h1 color-h2 m-0 p-0">服务流程</h2>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>成功的定制区块链项目需要良好的技能和流程的把控。我们使用精心设计的区块链开发流程，结合敏捷开发流程，让您的项目完全按照您的业务要求实现。</p>
+                                    <p>OpenLedger内部团队包括产品经理、需求分析人员、架构师、开发人员、质量保证专家和其他专业人士，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container mt-30px solution-container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="background-white sol2 sol-tile">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="h2">
-                                    <span>2 <span>/</span></span>开发阶段</h3>
-                                <p class="mt-10px">
-                                        此阶段我们以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报，让您了解项目最新的情况。
-                                </p>
-                            </div>
-                            <div class="col-md-6">
-                                <ul>
-                                    <li>设计、开发、测试 解决方案</li>
-                                    <li>建立文档库</li>
-                                    <li>启动并部署项目</li>
-                                    <li>与当前系统集成</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container mt-30px solution-container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="background-white sol3 sol-tile">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="h2">
-                                    <span>3 <span>/</span></span>支持</h3>
-                                <p class="mt-10px">随着您的公司发展日益壮大，您的区块链解决方案也需要跟上它的业务发展需要。我们提供持续的技术支持，以及对现有的功能进行改进和升级并根据情况而定增加新的特性。</p>
-                            </div>
-                            <div class="col-md-6">
-                                <ul>
-                                    <li>支持和维护解决方案</li>
-                                    <li>对解决方案的改进进行分析和研究</li>
-                                </ul>
+                        <div class="container mt-30px solution-container">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="background-white sol1 sol-tile">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h3 class="h2">
+                                                    <span>1 <span>/</span></span>项目调研和规划</h3>
+                                                <p class="mt-10px">
+                                                    调研的阶段可能比开发阶段需要更多的时间，因为我们必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
+                                                </p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <ul>
+                                                    <li>收集需求</li>
+                                                    <li>分析业务需求和问题</li>
+                                                    <li>进行报价和计算时间周期</li>
+                                                    <li>找出障碍点和风险</li>
+                                                    <li>制定策略和规划</li>
+                                                    <li>制作原型</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <div class="container mt-30px solution-container">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="background-white sol2 sol-tile">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h3 class="h2">
+                                                    <span>2 <span>/</span></span>开发阶段</h3>
+                                                <p class="mt-10px">
+                                                    此阶段我们以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报，让您了解项目最新的情况。
+                                                </p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <ul>
+                                                    <li>设计、开发、测试 解决方案</li>
+                                                    <li>建立文档库</li>
+                                                    <li>启动并部署项目</li>
+                                                    <li>与当前系统集成</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container mt-30px solution-container">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="background-white sol3 sol-tile">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h3 class="h2">
+                                                    <span>3 <span>/</span></span>支持</h3>
+                                                <p class="mt-10px">
+                                                    随着您的公司发展日益壮大，您的区块链解决方案也需要跟上它的业务发展需要。我们提供持续的技术支持，以及对现有的功能进行改进和升级并根据情况而定增加新的特性。
+                                                </p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <ul>
+                                                    <li>支持和维护解决方案</li>
+                                                    <li>对解决方案的改进进行分析和研究</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Our Process -->
                     </div>
-                </div>
-            </div>
-        </div>
-        <!-- Our Process -->
-    </div>
-    <!-- Common Footer -->
-    <% include ../common/footer.ejs %>
-    <!-- Common Footer End -->
+                    <!-- Common Footer -->
+                    <% include ../common/footer.ejs %>
+                    <!-- Common Footer End -->
 </body>
 
 </html>
