--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -256,19 +256,19 @@
                                                 <div class="new-list-wrap">
                                                     <div class="new-list-col-4">
                                                         <p>凭借在EOS智能合约开发方面的经验，我们的EOS专家可以协助您扩展DApp（去中心化应用程序）的开发和性能。</p>
-                                                        <p>EOS智能合约提供了经过身份验证的个人帐户，用户数据库以及用于通信和应用程序计划的选项。</p>
+                                                        <p>EOS智能合约提供了经过身份验证的个人帐户，一个用户数据库以及用于通信和应用程序计划的选项。</p>
                                                     </div>
                                                     <div class="new-list-col-8">
                                                         <div class="new-list">
                                                             <h4>借助EOS智能合约，您可以受益于：</h4>
                                                             <div class="new-list-points">
                                                                 <ul>
-                                                                    <li>扩展性增强</li>
+                                                                    <li>可扩展性增强</li>
                                                                     <li>处理海量数据</li>
                                                                     <li>减少成本</li>
                                                                 </ul>
                                                                 <ul>
-                                                                    <li>快速简便的dApp部署过程</li>
+                                                                    <li>快速简便的DApp部署过程</li>
                                                                     <li>基于角色的权限控制</li>
                                                                 </ul>
                                                             </div>
@@ -300,7 +300,7 @@
 
                                         <div class="col-lg-6 col-md-12 col-sm-12 df">
                                             <div class="ico"></div>
-                                            <h3>最佳做法建议</h3>
+                                            <h3>最佳实践建议</h3>
                                         </div>
 
                                         <div class="col-lg-6 col-md-12 col-sm-12 df">
@@ -315,7 +315,7 @@
 
                                         <div class="col-lg-6 col-md-12 col-sm-12 df">
                                             <div class="ico"></div>
-                                            <h3>安全概要</h3>
+                                            <h3>安全摘要</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -331,16 +331,17 @@
                                 <div class="gor-100">
                                     <div class="row col-text">
                                         <div class="col-md-5">
-                                            <p>智能合约基于区块链技术运行，传达了区块链的所有优势。分散，安全和自动化的区块链智能合约开发为公司提供安全性，经济性，自动化和标准化。</p>
+                                            <p>智能合约基于区块链技术运行，承载了区块链的所有优势。去中心化，安全和自动化的区块链智能合约开发为公司提供安全性，经济性，带来自动化和标准化。
+                                            </p>
                                         </div>
                                         <div class="col-md-7">
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <p>在以技术创造力和持续改进为特征的空间中，智能合约的速度与其底层的区块链息息相关。</p>
+                                                    <p>在一个以技术创新和持续改进为特征的领域，智能合约的速度与其底层区块链息息相关。</p>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <p>在OpenLedger，我们知道如何构建复杂而强大的解决方案。我们在由EVM（以太坊虚拟机）支持的Graphene上提供智能合约开发服务。
-                                                    </p>
+                                                    <p>在OpenLedger，我们知道如何构建复杂而强大的解决方案。我们提供基于EVM
+                                                        (Ethereum虚拟机)的石墨烯智能合约开发服务。</p>
                                                 </div>
                                             </div>
                                         </div>
