--- a/views/solutions/index.ejs
+++ b/views/solutions/index.ejs
@@ -68,12 +68,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>
-                        Enterprise blockchain solutions development </h1>
-                    <div class="h2-banner h2-banner-indents">
-                        Boost your business with blockchain-optimized processes, transparent operations and full
-                        immediate control over your assets </div>
-                    <a href="#contact" class="link">Get a Quote</a>
+                    <h1>企业区块链解决方案开发</h1>
+                    <div class="h2-banner h2-banner-indents">通过区块链优化的流程、透明的操作和对资产的完全即使控制来促进您的业务需求</div>
+                    <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
             </div>
@@ -83,14 +80,10 @@
         <div class="container solutions-tools">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="h1 color-h2 m-0 p-0">
-                        Our solutions </h2>
+                    <h2 class="h1 color-h2 m-0 p-0">我们的解决方案</h2>
                 </div>
                 <div class="col-md-6">
-                    OpenLedger develops custom end-to-end blockchain solutions for enterprises. We put our extensive
-                    knowledge and experience to work, creating complex, large-scale, and effective solutions to meet
-                    your industry and business requirements. We deliver blockchain products to a wide range of
-                    industries. </div>
+                    OpenLedger为企业开发自定义端到端的区块链解决方案。我们运用我们丰富的知识和经验，创造复杂、大规模、有效的解决方案来满足您的行业和业务需求。我们为各种行业提供区块链产品。</div>
             </div>
         </div>
         <div class="container">
@@ -98,168 +91,29 @@
         </div>
         <% include ../common/solutions.ejs %>
         <% include ../common/quote.ejs %>
-        <div class="container solutions-tools solutions-tools2">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 class="h1 color-h2 m-0 p-0">
-                        Tools and technologies </h2>
-                </div>
-                <div class="col-md-6">
-                    <div class="h4">
-                        Employing the latest blockchain tech to support your company’s success </div>
-                </div>
-            </div>
-        </div>
-        <div class="container technologies">
-            <!-- Technologies -->
-            <div class="row custom-tech-point">
-                <div class="col-md-4 col-sm-12">
-                    <h3 class="title-check">Technology stack</h3>
-                </div>
-                <div class="col-md-8 col-sm-12">
-                    <div class="grey-block">
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/python.svg" alt="Python">
-                            </div>
-                            <span>
-                                Python </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/c-1.svg" alt="C++">
-                            </div>
-                            <span>
-                                C++ </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/c.svg" alt="C#">
-                            </div>
-                            <span>
-                                C# </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/unity.svg" alt="Unity">
-                            </div>
-                            <span>
-                                Unity </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/postgresql.svg"
-                                    alt="PostgreSQL">
-                            </div>
-                            <span>
-                                PostgreSQL </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/reactjs.svg"
-                                    alt="React.js">
-                            </div>
-                            <span>
-                                React.js </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/nodejs.svg" alt="Node.js">
-                            </div>
-                            <span>
-                                Node.js </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/go.svg" alt="Go">
-                            </div>
-                            <span>
-                                Go </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/solidity.svg"
-                                    alt="Solidity">
-                            </div>
-                            <span>
-                                Solidity </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row custom-tech-point">
-                <div class="col-md-4 col-sm-12">
-                    <h3 class="title-check">Blockchain technologies</h3>
-                </div>
-                <div class="col-md-8 col-sm-12">
-                    <div class="grey-block">
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/bitshares.svg"
-                                    alt="BitShares">
-                            </div>
-                            <span>
-                                BitShares </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/bitcoin.svg" alt="genEOS">
-                            </div>
-                            <span>
-                                genEOS </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/ethereum.svg"
-                                    alt="Ethereum">
-                            </div>
-                            <span>
-                                Ethereum </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/eos.svg" alt="EOSIO">
-                            </div>
-                            <span>
-                                EOSIO </span>
-                        </div>
-                        <div class="custom-tech-point-icon df">
-                            <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/10/hyperledger.svg"
-                                    alt="HyperLedger">
-                            </div>
-                            <span>
-                                HyperLedger </span>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- Technologies -->
-        </div>
         <div class="container technologies technologies2">
             <div class="row">
                 <div class="col-md-6">
                     <div class="background-white two-column">
-                        <h3>
-                            Blockchain applications </h3>
+                        <h3>区块链的应用</h3>
                         <ul class="two-column">
-                            <li>Decentralized public registers</li>
-                            <li>Investment funds and platforms</li>
-                            <li>Multi-signature transactions</li>
-                            <li>Transaction tracking systems</li>
-                            <li>Digital voting and document approval</li>
+                            <li>去中心化的公共注册</li>
+                            <li>多重签名的交易</li>
+                            <li>投资基金和平台</li>
+                            <li>事务跟踪系统</li>
+                            <li>数字投票和文件批准</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="background-white two-column">
-                        <h3>
-                            Expertise areas </h3>
+                        <h3>专业领域</h3>
                         <ul class="two-column">
-                            <li>Smart contracts</li>
-                            <li>Decentralized exchange</li>
-                            <li>Virtual machines</li>
-                            <li>Digital wallets</li>
-                            <li>Digital tokens</li>
+                            <li>智能合约</li>
+                            <li>去中心化交易所</li>
+                            <li>虚拟机</li>
+                            <li>数字钱包</li>
+                            <li>数字通证</li>
                         </ul>
                     </div>
                 </div>
